Codificador Cifra de Cesar funcionando

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h2>Cifra de Cesar</h2>
         <h2>Base 64</h2>    
     </header>
-    
     <form>
         <fieldset>
             <legend>Escolha:</legend>
@@ -41,6 +40,9 @@
             <input type="text" name="entradaTexto" id="entradaTexto">
             <input type="submit" value="Enviar" id="botaoEnviaTudo">
         </fieldset>
+
+        <textarea name="resposta" id="resposta"></textarea>
+
     </form>
 
 
